--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_auth: ^5.4.2
   firebase_messaging: ^15.2.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
