--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   firebase_auth: ^5.4.2
   firebase_messaging: ^15.2.2
   http: ^1.3.0
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
+  connectivity_plus: ^6.1.3
+  permission_handler: ^11.3.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
