--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   connectivity_plus: ^6.1.3
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
+  google_maps_flutter_web: ^0.5.10
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
