--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,15 @@ dependencies:
   http: ^1.3.0
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
-  connectivity_plus: ^6.1.3
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
   google_maps_flutter_web: ^0.5.10
   flutter_polyline_points: ^2.1.0
+  # Remove unused animations or use smaller alternatives
   lottie: ^3.3.1
-  flutter_timer_countdown: ^1.0.7
+  google_fonts: ^6.2.1
+  # Use optimized SVG package
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
