--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  socket_io_client: ^2.0.3+1
+  provider: ^6.0.5
   flutter_animate: ^4.1.1+1
+  intl: ^0.18.1
   firebase_core: ^3.11.0
   cloud_firestore: ^5.6.3
   firebase_auth: ^5.4.2
