--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
-      <!-- Fixed uses-feature declaration -->
+    <!-- Fixed uses-feature declaration -->
     <uses-feature
         android:name="android.hardware.location.gps"
         android:required="true"/>
     <application
-        android:label="disaster_management"
+        android:label="SafeEscape"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
