--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,10 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_auth: ^5.4.2
   firebase_messaging: ^15.2.2
+  cached_network_image: ^3.3.0
   http: ^1.3.0
   google_maps_flutter: ^2.10.0
+  shimmer: ^2.0.0
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
@@ -33,12 +35,14 @@ dependencies:
   path_provider: ^2.1.5
   font_awesome_flutter: ^10.8.0
   rive: ^0.13.20
+  flutter_launcher_icons: ^0.14.3
 
 flutter:
   uses-material-design: true
   
   assets:
-    - assets/animations/
+    - assets/icon/
     - assets/cloud.svg
     - assets/rainy.svg
     - assets/sun.svg
+    - assets/animations/
