--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.2.5  # Use the latest version
 
   cupertino_icons: ^1.0.8
   socket_io_client: ^2.0.3+1
