--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,33 +9,38 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.2.5  # Use the latest version
-
-  cupertino_icons: ^1.0.8
+  # Keep only packages that are actually imported in your code
   socket_io_client: ^2.0.3+1
   provider: ^6.0.5
-  flutter_animate: ^4.1.1+1
   intl: ^0.18.1
   firebase_core: ^3.11.0
   cloud_firestore: ^5.6.3
   firebase_auth: ^5.4.2
   firebase_messaging: ^15.2.2
-  cached_network_image: ^3.3.0
   http: ^1.3.0
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
-  google_maps_flutter_web: ^0.5.10
   flutter_polyline_points: ^2.1.0
   lottie: ^3.3.1
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.17
-  flutter_native_splash: ^2.4.4
-  path_provider: ^2.1.5
   font_awesome_flutter: ^10.8.0
-  rive: ^0.13.20
+  
+  # Keep these only if you confirmed they're used
+  # url_launcher: ^6.2.5
+  # cupertino_icons: ^1.0.8
+  # flutter_animate: ^4.1.1+1
+  # cached_network_image: ^3.3.0
+  # google_maps_flutter_web: ^0.5.10
+  # path_provider: ^2.1.5
+  # rive: ^0.13.20
+
+dev_dependencies:
+  dependency_validator: ^5.0.2
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.4
 
 flutter:
   uses-material-design: true
