--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,33 +9,47 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.2.5  # Use the latest version
-
-  cupertino_icons: ^1.0.8
-  socket_io_client: ^2.0.3+1
+  
+  # Core functionality
   provider: ^6.0.5
-  flutter_animate: ^4.1.1+1
   intl: ^0.18.1
-  firebase_core: ^3.11.0
-  cloud_firestore: ^5.6.3
-  firebase_auth: ^5.4.2
-  firebase_messaging: ^15.2.2
-  cached_network_image: ^3.3.0
   http: ^1.3.0
+  
+  # Firebase essentials
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.8.5
+  firebase_auth: ^4.7.3
+  firebase_messaging: ^14.6.7
+  
+  # Location and maps (essential for disaster management)
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
-  google_maps_flutter_web: ^0.5.10
   flutter_polyline_points: ^2.1.0
-  lottie: ^3.3.1
+  
+  # UI components (essential)
   google_fonts: ^6.2.1
-  flutter_svg: ^2.0.17
-  flutter_native_splash: ^2.4.4
-  path_provider: ^2.1.5
+  lottie: ^3.3.1
   font_awesome_flutter: ^10.8.0
-  rive: ^0.13.20
+  
+  # Backend communication
+  socket_io_client: ^2.0.3+1
+
+dev_dependencies:
+  # Development tools
+  dependency_validator: ^5.0.2
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.4
+  
+  # UI design tools (moved to dev_dependencies)
+  flutter_svg: ^2.0.17
+  flutter_animate: ^4.1.1+1
+  
+  # Optional utilities (moved to dev_dependencies)
+  url_launcher: ^6.2.5
+  path_provider: ^2.1.5
+  cached_network_image: ^3.3.0
 
 flutter:
   uses-material-design: true
@@ -46,3 +60,4 @@ flutter:
     - assets/rainy.svg
     - assets/sun.svg
     - assets/animations/
+
