--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: disaster_management
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -9,30 +9,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Core functionality
   provider: ^6.0.5
   intl: ^0.18.1
   http: ^1.3.0
-  
+
   # Firebase essentials
   firebase_core: ^2.15.1
   cloud_firestore: ^4.8.5
   firebase_auth: ^4.7.3
   firebase_messaging: ^14.6.7
-  
+
   # Location and maps (essential for disaster management)
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
   flutter_polyline_points: ^2.1.0
-  
+
   # UI components (essential)
   google_fonts: ^6.2.1
   lottie: ^3.3.1
   font_awesome_flutter: ^10.8.0
-  
+
   # Backend communication
   socket_io_client: ^2.0.3+1
 
@@ -41,11 +41,11 @@ dev_dependencies:
   dependency_validator: ^5.0.2
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.4
-  
+
   # UI design tools (moved to dev_dependencies)
   flutter_svg: ^2.0.17
   flutter_animate: ^4.1.1+1
-  
+
   # Optional utilities (moved to dev_dependencies)
   url_launcher: ^6.2.5
   path_provider: ^2.1.5
@@ -53,11 +53,18 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/icon/
     - assets/cloud.svg
     - assets/rainy.svg
     - assets/sun.svg
     - assets/animations/
-
+    # Add this section at the bottom of your pubspec.yaml file
+flutter_launcher_icons:
+  android: true
+  ios: false # Since you're targeting Android only
+  image_path: "assets/icon/ic_launcher.png"
+  adaptive_icon_foreground: "assets/icon/ic_launcher_foreground.png"
+  adaptive_icon_background: "#FFFFFF" # Or any color that matches your icon design
+  min_sdk_android: 23
