added final featues

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
+        <!-- Add this meta-data tag for reCAPTCHA web client ID -->
+        <meta-data
+            android:name="com.google.firebase.auth.RecaptchaWebClientId"
+            android:value="1234567890-abcdefghijklmnopqrst.apps.googleusercontent.com" />
+            
+        <!-- Note: You have duplicate reCAPTCHA enabled meta-data tags, remove one of them -->
+        <meta-data
+            android:name="com.google.firebase.auth.RecaptchaEnabled"
+            android:value="true" />
+
          <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBkvqEa_ByQVCfVBo1V-783vMxyt4loQcY"/>
@@ -46,7 +56,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
       
-
+        <meta-data
+            android:name="com.google.firebase.auth.RecaptchaEnabled"
+            android:value="true" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
