--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,14 +32,9 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         minSdkVersion 23 
-    }
-
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
-        }
+        manifestPlaceholders += [
+            'com.google.firebase.auth.RecaptchaEnabled': 'true'
+        ]
     }
 }
 
