--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   permission_handler: ^11.3.1
   geocoding: ^3.0.0
   flutter_polyline_points: ^2.1.0
+  shared_preferences: ^2.2.0
 
   # UI components (essential)
   google_fonts: ^6.2.1
