--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
     sdk: flutter
 
   # Core functionality
-  provider: ^6.0.5
   intl: ^0.18.1
   http: ^1.3.0
 
@@ -39,7 +38,6 @@ dependencies:
 
 dev_dependencies:
   # Development tools
-  dependency_validator: ^5.0.2
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.4
 
@@ -48,9 +46,8 @@ dev_dependencies:
   flutter_animate: ^4.1.1+1
 
   # Optional utilities (moved to dev_dependencies)
-  url_launcher: ^6.2.5
   path_provider: ^2.1.5
-  cached_network_image: ^3.3.0
+  # cached_network_image: ^3.3.0
 
 flutter:
   uses-material-design: true
