--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,38 +2,43 @@ name: Android Build
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [main, master, develop]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.16.x'
           channel: 'stable'
           cache: true
-      
-      - name: Get dependencies
+
+      - name: Verify Flutter Installation
+        run: flutter doctor
+
+      - name: Get Dependencies
         run: flutter pub get
-      
-      - name: Run tests
+
+      - name: Run Flutter Tests
         run: flutter test
-      
+
       - name: Build APK
         run: flutter build apk --release
-      
+
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
