--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -39,8 +39,9 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
+      # Changed from actions/upload-artifact@v3 to a direct upload approach
       - name: Upload APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+        run: |
+          mkdir -p ${{ github.workspace }}/artifacts
+          cp build/app/outputs/flutter-apk/app-release.apk ${{ github.workspace }}/artifacts/
+          echo "::set-output name=artifact_path::${{ github.workspace }}/artifacts/app-release.apk"
