added app sign in configurations

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,13 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+// Move keystoreProperties definition here, before it's used
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "com.example.disaster_management"
     compileSdk = flutter.compileSdkVersion
@@ -55,8 +62,4 @@ flutter {
     source = "../.."
 }
 
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
+// Remove the duplicate keystoreProperties definition that was here
